[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual_screening"
version = "0.0.1"
authors = [
    {name="FEI YUAN", email="fei.yuan@bcm.edu"},
    {name="Chong Lu", email="chong.lu@bcm.edu"},
]
description = "vs - virtual screening, a pipeline makes virtual screening easily to perform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = 'MIT'}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'cmder',
    'loguru',
    'rdkit',
    'numpy',
    'scipy',
    'pandas',
    'scikit-learn',
    'pandarallel'
]
[tool.setuptools.package-data]
"*" = ["*.sh"]
[project.scripts]
batch-ligand = "virtual_screening.batch_ligand:main"
cluster-pose = "virtual_screening.cluster_pose:main"
docking = "virtual_screening.docking:main"
interaction-pose = "virtual_screening.interaction_pose:main"
molecule-dynamics = "virtual_screening.molecule_dynamics:main"
post-docking = "virtual_screening.post_docking:main"
virtual-screening = "virtual_screening.virtual_screening:main"
