[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vs"
version = "0.0.1"
authors = [
    {name="FEI YUAN", email="fei.yuan@bcm.edu"},
    {name="Chong Lu", email="chong.lu@bcm.edu"},
]
description = "vs - virtual screening, a pipeline makes virtual screening easily to perform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = 'MIT'}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'cmder',
    'rdkit',
    'numpy',
    'scipy',
    'pandas',
    'scikit-learn',
]
[tool.setuptools.package-data]
"*" = ["*.sh"]
[project.scripts]
vs-batch-ligand = "vs.batch_ligand:main"
vs-cluster-pose = "vs.cluster_pose:main"
vs-docking = "vs.docking:main"
vs-interaction-pose = "vs.interaction_pose:main"
vs-molecule-dynamics = "vs.molecule_dynamics:main"
vs-post-docking = "vs.post_docking:main"
vs-post-md = "vs.post_md:main"
vs = "vs.virtual_screening:main"
