[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual_screening"
version = "0.0.1"
authors = [
    {name="FEI YUAN", email="fei.yuan@bcm.edu"},
    {name="Chong Lu", email="chong.lu@bcm.edu"},
]
description = "vs - virtual screening, a pipeline makes virtual screening easily to perform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = 'MIT'}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'cmder',
    'loguru',
    'rdkit',
    'numpy',
    'scipy',
    'pandas',
    'scikit-learn',
    'vstool@ git+ssh://git@github.com-vstool/cdd-informatics/vstool.git',
    'MolIO@ git+ssh://git@github.com-MolIO/cdd-informatics/MolIO.git'
]
[tool.setuptools.package-data]
"*" = ["*.sh"]
[project.scripts]
vs-batch-ligand = "virtual_screening.batch_ligand:main"
vs-filter-ligand = "virtual_screening.filter_ligand:main"
vs-prepare-receptor = "virtual_screening.prepare_receptor:main"
vs-cluster-pose = "virtual_screening.cluster_pose:main"
vs-docking = "virtual_screening.docking:main"
vs-interaction-pose = "virtual_screening.interaction_pose:main"
vs-molecule-dynamics = "virtual_screening.molecule_dynamics:main"
vs-simulate = "virtual_screening.molecule_dynamics:main"
vs-postdoc = "virtual_screening.post_docking:main"
vs-post-docking = "virtual_screening.post_docking:main"
vs-post-md = "virtual_screening.post_md:main"
vs-postmd = "virtual_screening.post_md:main"
vs = "virtual_screening.virtual_screening:main"
